[package]
name = "gila-performative-banget-guweh"
version = "0.1.0"
edition = "2024"

[dependencies]
discord-rpc-client = "0.4.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "gpbg"
path = "src/main.rs"
